<resources>
    <string name="app_name">NextHR</string>
    <string name="first_admin_main">Your company will be registered, in order to use your company you must sign up the admin account! We advise you to not use this account for any employee, including yourself! This account will have the rights to add/edit/delete any information in your system!</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="log_in">Log in!</string>
    <string name="company">Company</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="go">GO</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="icon_people">&#xf007;</string>
    <string name="icon_edit">&#xf044;</string>
    <string name="icon_trash">&#xf1f8;</string>
    <string name="icon_search">&#xf002;</string>
    <string name="icon_plus">&#xf067;</string>
    <string name="icon_book">&#xf02d;</string>
    <string name="icon_check">&#xf00c;</string>
    <string name="icon_times">&#xf00d;</string>
    <string name="icon_cdown">&#xf078;</string>
    <string name="icon_paper_plane">&#xf1d8;</string>
    <string name="title_activity_login_new">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="line">-</string>
    <string name="notFound">Not found!</string>
    <string name="departments">Departments</string>
    <string name="employees">Employees</string>
    <string name="administration">Administration</string>
    <string name="locations">Locations</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="postal_code">Postal code</string>
    <string name="county">County</string>
    <string name="country">Country</string>
    <string name="add_location">Add Location</string>
    <string name="dbError">Something went wrong...</string>
    <string name="search">Search..</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="phone">Phone</string>
    <string name="birthday">Birthday</string>
    <string name="save">Save</string>
    <string name="change_password">Change Password</string>
    <string name="add">ADD</string>
    <string name="name">Name</string>
    <string name="manager">Manager</string>
    <string name="location">Location</string>
    <string name="birthday_dd_mm_yyyy">Birthday(dd/mm/yyyy)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="department">Department</string>
    <string name="role_job">Role/Job</string>
    <string name="add_employee">Add Employee</string>
    <string name="add_department">Add Department</string>
    <string name="add_role">Add Role</string>
    <string name="attendance">Attendance</string>
    <string name="edit_department">Edit Department</string>
    <string name="edit_location">Edit Location</string>
    <string name="profile">Profile</string>
    <string name="roles">Roles</string>
    <string name="salary">Salary(per hour)</string>
    <string name="error_user_exists">Email already in use!</string>
    <string name="is_admin">Is admin?</string>
    <string name="min_salary">Min Salary</string>
    <string name="max_salary">Max Salary</string>
    <string name="edit_role">Edit Role</string>
    <string name="salary_for">Salary for :</string>
    <string name="holidays_for">Holidays for:</string>
    <string name="requests">Requests</string>
    <string name="holydays">Holydays</string>
    <string name="_salary">Salary</string>
    <string name="log_out">Log out</string>
    <string name="loading">Loading...</string>
    <string name="not_set">Not set!</string>
    <string name="holiday_requets">Holiday requets</string>
    <string name="pending">Pending</string>
    <string name="accepted">Accepted</string>
    <string name="declined">Declined</string>
    <string name="date">Date...</string>
    <string name="dates">Dates</string>
    <string name="messages">Messages</string>
    <string name="send">Send</string>
    <string name="close_application">Close Application</string>
    <string name="attendances">Attendances</string>
    <string name="arrival_time">Arrival Time</string>
    <string name="leave_time">Leave Time</string>
    <string name="day">Day</string>
    <string name="remove">Remove</string>
    <string name="generate_csv">Generate CSV</string>
    <string name="salaries">Salaries</string>
    <string-array name="holiday_requests_status">
        <item>All requests</item>
        <item>Pending</item>
        <item>Approved</item>
        <item>Rejected</item>
    </string-array>
</resources>
