<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/General"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_attendance"
            android:icon="@android:drawable/ic_menu_week"
            android:title="@string/attendance" />
        <item
            android:id="@+id/nav_salary"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="@string/_salary" />
        <item
            android:id="@+id/nav_holidays"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/holydays" />
        <item
            android:id="@+id/nav_logOut"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/log_out"/>

    <item
        android:id="@+id/nav_administration"
        android:title="@string/administration"
        android:visible="false"
        android:checkableBehavior="single">
        <menu>
            <item
                android:id="@+id/nav_roles"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/roles" />
            <item
                android:id="@+id/nav_employees"
                android:icon="@android:drawable/ic_menu_myplaces"
                android:title="@string/employees" />
            <item
                android:id="@+id/nav_departments"
                android:icon="@android:drawable/ic_menu_compass"
                android:title="@string/departments" />
            <item
                android:id="@+id/nav_locations"
                android:icon="@android:drawable/ic_dialog_map"
                android:title="@string/locations" />
        </menu>
    </item>
    </group>

</menu>
