<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEmployee">
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/AddEmployeeProgress"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/AddEmployeeView">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/last_name"
                android:id="@+id/EmpLastNameLabel"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/EmpLastNameInput"
                android:singleLine="true"
                android:layout_below="@id/EmpLastNameLabel"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/first_name"
                android:layout_below="@+id/EmpLastNameInput"
                android:id="@+id/EmpFirstNameLabel"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:id="@+id/EmpFirstNameInput"
                android:layout_below="@id/EmpFirstNameLabel"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="20sp"
                android:layout_below="@id/EmpFirstNameInput"
                android:id="@+id/EmpEmailLabel"/>

            <EditText
                android:id="@+id/EmpEmailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:layout_below="@id/EmpEmailLabel"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/EmpPhoneLabel"
                android:text="@string/phone"
                android:layout_below="@id/EmpEmailInput"
                android:textSize="20sp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="phone"
                android:id="@+id/EmpPhoneInput"
                android:layout_below="@id/EmpPhoneLabel"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/birthday_dd_mm_yyyy"
                android:id="@+id/EmpBirthdayLabel"
                android:layout_below="@id/EmpPhoneInput" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:id="@+id/EmpBirthdayInput"
                android:layout_below="@id/EmpBirthdayLabel"
                android:inputType="date"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/department"
                android:layout_below="@id/EmpBirthdayInput"
                android:id="@+id/EmpDepLabel"/>

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/EmpDepLabel"
                android:id="@+id/EmpDepInput"
                android:singleLine="true"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/role_job"
                android:layout_below="@id/EmpDepInput"
                android:id="@+id/EmpRoleLabel"/>

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/EmpRoleLabel"
                android:singleLine="true"
                android:id="@+id/EmpRoleInput"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/EmpRoleInput"
                android:id="@+id/EmpSalaryLabel"
                android:textSize="20sp"
                android:text="@string/salary"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/EmpSalaryLabel"
                android:inputType="numberDecimal"
                android:id="@+id/EmpSalaryInput"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/EmpSalaryInput"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:id="@+id/AddEmployeeButton"
                android:background="@color/colorPrimaryDark"
                android:textColor="@android:color/white"
                android:text="@string/add"/>


        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>


</RelativeLayout>