<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditAttendanceActivity">

    <TextView
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/employee"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/border_shadow"
        android:textSize="28sp"
        android:textColor="@color/design_default_color_primary_dark"
        android:text="Employee San Attendance"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/employee"
        android:layout_marginTop="3dp"
        android:id="@+id/start_label"
        android:text="@string/arrival_time"
        android:textSize="22sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/start_label"
        android:id="@+id/start"
        style="@android:style/Widget.EditText"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/start"
        android:textSize="22sp"
        android:text="@string/leave_time"
        android:id="@+id/leave_label"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/leave"
        app:layout_constraintTop_toBottomOf="@id/leave_label"
        style="@android:style/Widget.EditText"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/date_label"
        android:text="@string/day"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/leave"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/date"
        style="@android:style/Widget.EditText"
        app:layout_constraintTop_toBottomOf="@id/date_label"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/date"
        android:background="@drawable/border"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:textColor="@android:color/white"
        android:text="@string/save"
        android:id="@+id/save"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/save"
        android:id="@+id/delete"
        android:background="@drawable/border_red"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/remove"/>



</android.support.constraint.ConstraintLayout>