<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/ProfileProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/ProfileView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="2dp">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/imagePicker"
                android:layout_width="149dp"
                android:layout_height="88dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/anonymous"
                app:civ_border_color="#FF000000"
                app:civ_border_width="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profileLastNameLabel"
                android:text="@string/last_name"
                app:layout_constraintTop_toBottomOf="@id/imagePicker"/>
            <EditText
                android:id="@+id/profileLastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileLastNameLabel" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:id="@+id/firstNameLabel"
                app:layout_constraintTop_toBottomOf="@id/profileLastName"/>
            <EditText
                android:id="@+id/profileFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstNameLabel" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                app:layout_constraintTop_toBottomOf="@id/profileFirstName"
                android:id="@+id/emailLabel"/>

            <EditText
                android:id="@+id/profileEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailLabel" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                app:layout_constraintTop_toBottomOf="@id/profileEmail"
                android:id="@+id/phoneLabel"/>

            <EditText
                android:id="@+id/profilePhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phoneLabel" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/birthday"
                app:layout_constraintTop_toBottomOf="@id/profilePhone"
                android:id="@+id/birthdayLabel"/>
            <EditText
                android:id="@+id/profileBirthday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/birthdayLabel" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/salary"
                app:layout_constraintTop_toBottomOf="@id/profileBirthday"
                android:id="@+id/salaryLabel"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:text="@string/not_set"
                android:id="@+id/profileSalary"
                app:layout_constraintTop_toBottomOf="@id/salaryLabel" />
            <TextView
                android:id="@+id/profileDepartmentLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/department"
                app:layout_constraintTop_toBottomOf="@id/profileSalary" />

            <EditText
                android:id="@+id/profileDepartment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/loading"
                android:editable="false"
                app:layout_constraintTop_toBottomOf="@id/profileDepartmentLabel"/>

            <TextView
                android:id="@+id/profileRoleLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/profileDepartment"
                android:text="@string/role_job"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profileRole"
                android:hint="@string/loading"
                app:layout_constraintTop_toBottomOf="@id/profileRoleLabel"
                android:editable="false"/>

            <Button
                android:id="@+id/profile_SaveProfileButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/design_default_color_primary_dark"
                android:text="@string/save"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profileRole"
                tools:layout_editor_absoluteY="563dp" />

            <Button
                android:id="@+id/profile_changePasswordButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/transparent"
                android:text="@string/change_password"
                android:textColor="@android:color/holo_red_dark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.518"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_SaveProfileButton"
                app:layout_constraintVertical_bias="0.0" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>
